test/errors/segment1.input.asm

* = $801
!segment code(start=256, end=1024)

!segment undefed_segname ; unknown segment
